// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Leaderboard Tables Mobile 1`] = `
<div>
  <div>
    <div
      class="md:max-w-md mt-8"
    >
      <div
        class="text-gray-900 font-semibold"
      >
        SubhanAllah
      </div>
       
      <div
        class="flex flex-col mt-3"
      >
        <div
          class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8"
        >
          <div
            class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8"
          >
            <div
              class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg"
            >
              <table
                class="min-w-full divide-y divide-gray-200"
              >
                <thead
                  class="bg-gray-50"
                >
                  <tr>
                    <th
                      class="px-6 py-3 text-left text-xs font-medium text-gray-500 tracking-wider"
                      scope="col"
                    >
                      
                  Username
                
                    </th>
                     
                    <th
                      class="px-6 py-3 text-left text-xs font-medium text-gray-500 tracking-wider"
                      scope="col"
                    >
                      
                  Total
                
                    </th>
                  </tr>
                </thead>
                 
                <tbody>
                  <tr
                    class="bg-white"
                  >
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
                    >
                      
                  Bob Ross
                
                    </td>
                     
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"
                    >
                      
                  50
                
                    </td>
                  </tr>
                  <tr
                    class="bg-white bg-gray-50"
                  >
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
                    >
                      
                  Steve Ross
                
                    </td>
                     
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"
                    >
                      
                  75
                
                    </td>
                  </tr>
                  <tr
                    class="bg-white"
                  >
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
                    >
                      
                  CoolGuy23
                
                    </td>
                     
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"
                    >
                      
                  40
                
                    </td>
                  </tr>
                  <tr
                    class="bg-white bg-gray-50"
                  >
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
                    >
                      
                  Memer
                
                    </td>
                     
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"
                    >
                      
                  32
                
                    </td>
                  </tr>
                  <tr
                    class="bg-white"
                  >
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
                    >
                      
                  Luke
                
                    </td>
                     
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"
                    >
                      
                  45
                
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="md:max-w-md mt-8"
    >
      <div
        class="text-gray-900 font-semibold"
      >
        Alhamdulillah
      </div>
       
      <div
        class="flex flex-col mt-3"
      >
        <div
          class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8"
        >
          <div
            class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8"
          >
            <div
              class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg"
            >
              <table
                class="min-w-full divide-y divide-gray-200"
              >
                <thead
                  class="bg-gray-50"
                >
                  <tr>
                    <th
                      class="px-6 py-3 text-left text-xs font-medium text-gray-500 tracking-wider"
                      scope="col"
                    >
                      
                  Username
                
                    </th>
                     
                    <th
                      class="px-6 py-3 text-left text-xs font-medium text-gray-500 tracking-wider"
                      scope="col"
                    >
                      
                  Total
                
                    </th>
                  </tr>
                </thead>
                 
                <tbody>
                  <tr
                    class="bg-white"
                  >
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
                    >
                      
                  Bro
                
                    </td>
                     
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"
                    >
                      
                  80
                
                    </td>
                  </tr>
                  <tr
                    class="bg-white bg-gray-50"
                  >
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
                    >
                      
                  Memer
                
                    </td>
                     
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"
                    >
                      
                  6
                
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Leaderboard Tables Primary 1`] = `
<div>
  <div>
    <div
      class="md:max-w-md mt-8"
    >
      <div
        class="text-gray-900 font-semibold"
      >
        SubhanAllah
      </div>
       
      <div
        class="flex flex-col mt-3"
      >
        <div
          class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8"
        >
          <div
            class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8"
          >
            <div
              class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg"
            >
              <table
                class="min-w-full divide-y divide-gray-200"
              >
                <thead
                  class="bg-gray-50"
                >
                  <tr>
                    <th
                      class="px-6 py-3 text-left text-xs font-medium text-gray-500 tracking-wider"
                      scope="col"
                    >
                      
                  Username
                
                    </th>
                     
                    <th
                      class="px-6 py-3 text-left text-xs font-medium text-gray-500 tracking-wider"
                      scope="col"
                    >
                      
                  Total
                
                    </th>
                  </tr>
                </thead>
                 
                <tbody>
                  <tr
                    class="bg-white"
                  >
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
                    >
                      
                  Bob Ross
                
                    </td>
                     
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"
                    >
                      
                  50
                
                    </td>
                  </tr>
                  <tr
                    class="bg-white bg-gray-50"
                  >
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
                    >
                      
                  Steve Ross
                
                    </td>
                     
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"
                    >
                      
                  75
                
                    </td>
                  </tr>
                  <tr
                    class="bg-white"
                  >
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
                    >
                      
                  CoolGuy23
                
                    </td>
                     
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"
                    >
                      
                  40
                
                    </td>
                  </tr>
                  <tr
                    class="bg-white bg-gray-50"
                  >
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
                    >
                      
                  Memer
                
                    </td>
                     
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"
                    >
                      
                  32
                
                    </td>
                  </tr>
                  <tr
                    class="bg-white"
                  >
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
                    >
                      
                  Luke
                
                    </td>
                     
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"
                    >
                      
                  45
                
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="md:max-w-md mt-8"
    >
      <div
        class="text-gray-900 font-semibold"
      >
        Alhamdulillah
      </div>
       
      <div
        class="flex flex-col mt-3"
      >
        <div
          class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8"
        >
          <div
            class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8"
          >
            <div
              class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg"
            >
              <table
                class="min-w-full divide-y divide-gray-200"
              >
                <thead
                  class="bg-gray-50"
                >
                  <tr>
                    <th
                      class="px-6 py-3 text-left text-xs font-medium text-gray-500 tracking-wider"
                      scope="col"
                    >
                      
                  Username
                
                    </th>
                     
                    <th
                      class="px-6 py-3 text-left text-xs font-medium text-gray-500 tracking-wider"
                      scope="col"
                    >
                      
                  Total
                
                    </th>
                  </tr>
                </thead>
                 
                <tbody>
                  <tr
                    class="bg-white"
                  >
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
                    >
                      
                  Bro
                
                    </td>
                     
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"
                    >
                      
                  80
                
                    </td>
                  </tr>
                  <tr
                    class="bg-white bg-gray-50"
                  >
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
                    >
                      
                  Memer
                
                    </td>
                     
                    <td
                      class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"
                    >
                      
                  6
                
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Loader Primary 1`] = `
<div
  class="flex justify-center items-center opacity-50"
>
  <img
    src="@/assets/loader.gif"
  />
</div>
`;

exports[`Storyshots Nav Guest 1`] = `
<nav
  class="bg-gray-800"
>
  <div
    class="px-4 mx-auto max-w-7xl sm:px-6 lg:px-8"
  >
    <div
      class="flex items-center justify-between h-16"
    >
      <div
        class="flex items-center"
      >
        <div
          class="flex-shrink-0"
        >
          <div
            class="text-white font-bold tracking-wide"
          >
            <span>
              Halal
            </span>
             
            <span
              class="text-green-400"
            >
              Competitions
            </span>
          </div>
        </div>
         
        <div
          class="hidden md:block"
        >
          <div
            class="flex items-baseline ml-10 space-x-4"
          >
            <a
              aria-current="page"
              class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white router-link-exact-active router-link-active"
              href="#/"
            >
              Home

            </a>
             
            <a
              class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white hidden"
              href="#/dashboard"
            >
              Dashboard

            </a>
             
            <a
              class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white"
              href="#/results"
            >
              Results

            </a>
          </div>
        </div>
      </div>
       
      <div
        class="hidden md:block"
      >
        <div
          class="flex items-center ml-4 md:ml-6"
        >
          <a
            class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white"
            href="#/login"
          >
            Login

          </a>
           
          <a
            class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white"
            href="#/register"
          >
            Register

          </a>
           
          <a
            class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white hidden"
            href="#/logout"
          >
            Log out

          </a>
        </div>
      </div>
       
      <div
        class="flex -mr-2 md:hidden"
      >
        <button
          class="inline-flex items-center justify-center p-2 text-gray-400 bg-gray-800 rounded-md hover:text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white"
        >
          <span
            class="sr-only"
          >
            Open main menu
          </span>
           
          <svg
            aria-hidden="true"
            class="block w-6 h-6"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 6h16M4 12h16M4 18h16"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
           
          <svg
            aria-hidden="true"
            class="w-6 h-6 hidden"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
   
  <div
    class="md:hidden hidden"
  >
    <div
      class="px-2 pt-2 pb-3 space-y-1 sm:px-3"
    >
      <a
        aria-current="page"
        class="block px-3 py-2 text-base font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white router-link-exact-active router-link-active"
        href="#/"
      >
        Home
      </a>
       
      <a
        class="block px-3 py-2 text-base font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white hidden"
        href="#/dashboard"
      >
        Dashboard
      </a>
       
      <a
        class="block px-3 py-2 text-base font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white"
        href="#/results"
      >
        Results
      </a>
    </div>
     
    <div
      class="pb-3 border-t border-gray-700"
    >
      <div
        class="px-2 mt-3 space-y-1 mb-1"
      >
        <a
          class="block px-3 py-2 text-base font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white"
          href="#/login"
        >
          Login
        </a>
         
        <a
          class="block px-3 py-2 text-base font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white"
          href="#/register"
        >
          Register
        </a>
         
        <a
          class="block px-3 py-2 text-base font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white hidden"
          href="#/logout"
        >
          Log out
        </a>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Storyshots Nav Logged In 1`] = `
<nav
  class="bg-gray-800"
>
  <div
    class="px-4 mx-auto max-w-7xl sm:px-6 lg:px-8"
  >
    <div
      class="flex items-center justify-between h-16"
    >
      <div
        class="flex items-center"
      >
        <div
          class="flex-shrink-0"
        >
          <div
            class="text-white font-bold tracking-wide"
          >
            <span>
              Halal
            </span>
             
            <span
              class="text-green-400"
            >
              Competitions
            </span>
          </div>
        </div>
         
        <div
          class="hidden md:block"
        >
          <div
            class="flex items-baseline ml-10 space-x-4"
          >
            <a
              aria-current="page"
              class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white router-link-exact-active router-link-active hidden"
              href="#/"
            >
              Home

            </a>
             
            <a
              class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white"
              href="#/dashboard"
            >
              Dashboard

            </a>
             
            <a
              class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white"
              href="#/results"
            >
              Results

            </a>
          </div>
        </div>
      </div>
       
      <div
        class="hidden md:block"
      >
        <div
          class="flex items-center ml-4 md:ml-6"
        >
          <a
            class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white hidden"
            href="#/login"
          >
            Login

          </a>
           
          <a
            class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white hidden"
            href="#/register"
          >
            Register

          </a>
           
          <a
            class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white"
            href="#/logout"
          >
            Log out

          </a>
        </div>
      </div>
       
      <div
        class="flex -mr-2 md:hidden"
      >
        <button
          class="inline-flex items-center justify-center p-2 text-gray-400 bg-gray-800 rounded-md hover:text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white"
        >
          <span
            class="sr-only"
          >
            Open main menu
          </span>
           
          <svg
            aria-hidden="true"
            class="block w-6 h-6"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 6h16M4 12h16M4 18h16"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
           
          <svg
            aria-hidden="true"
            class="w-6 h-6 hidden"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
   
  <div
    class="md:hidden hidden"
  >
    <div
      class="px-2 pt-2 pb-3 space-y-1 sm:px-3"
    >
      <a
        aria-current="page"
        class="block px-3 py-2 text-base font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white router-link-exact-active router-link-active hidden"
        href="#/"
      >
        Home
      </a>
       
      <a
        class="block px-3 py-2 text-base font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white"
        href="#/dashboard"
      >
        Dashboard
      </a>
       
      <a
        class="block px-3 py-2 text-base font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white"
        href="#/results"
      >
        Results
      </a>
    </div>
     
    <div
      class="pb-3 border-t border-gray-700"
    >
      <div
        class="px-2 mt-3 space-y-1 mb-1"
      >
        <a
          class="block px-3 py-2 text-base font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white hidden"
          href="#/login"
        >
          Login
        </a>
         
        <a
          class="block px-3 py-2 text-base font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white hidden"
          href="#/register"
        >
          Register
        </a>
         
        <a
          class="block px-3 py-2 text-base font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white"
          href="#/logout"
        >
          Log out
        </a>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Storyshots Nav Mobile Guest 1`] = `
<nav
  class="bg-gray-800"
>
  <div
    class="px-4 mx-auto max-w-7xl sm:px-6 lg:px-8"
  >
    <div
      class="flex items-center justify-between h-16"
    >
      <div
        class="flex items-center"
      >
        <div
          class="flex-shrink-0"
        >
          <div
            class="text-white font-bold tracking-wide"
          >
            <span>
              Halal
            </span>
             
            <span
              class="text-green-400"
            >
              Competitions
            </span>
          </div>
        </div>
         
        <div
          class="hidden md:block"
        >
          <div
            class="flex items-baseline ml-10 space-x-4"
          >
            <a
              aria-current="page"
              class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white router-link-exact-active router-link-active"
              href="#/"
            >
              Home

            </a>
             
            <a
              class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white hidden"
              href="#/dashboard"
            >
              Dashboard

            </a>
             
            <a
              class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white"
              href="#/results"
            >
              Results

            </a>
          </div>
        </div>
      </div>
       
      <div
        class="hidden md:block"
      >
        <div
          class="flex items-center ml-4 md:ml-6"
        >
          <a
            class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white"
            href="#/login"
          >
            Login

          </a>
           
          <a
            class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white"
            href="#/register"
          >
            Register

          </a>
           
          <a
            class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white hidden"
            href="#/logout"
          >
            Log out

          </a>
        </div>
      </div>
       
      <div
        class="flex -mr-2 md:hidden"
      >
        <button
          class="inline-flex items-center justify-center p-2 text-gray-400 bg-gray-800 rounded-md hover:text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white"
        >
          <span
            class="sr-only"
          >
            Open main menu
          </span>
           
          <svg
            aria-hidden="true"
            class="block w-6 h-6"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 6h16M4 12h16M4 18h16"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
           
          <svg
            aria-hidden="true"
            class="w-6 h-6 hidden"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
   
  <div
    class="md:hidden hidden"
  >
    <div
      class="px-2 pt-2 pb-3 space-y-1 sm:px-3"
    >
      <a
        aria-current="page"
        class="block px-3 py-2 text-base font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white router-link-exact-active router-link-active"
        href="#/"
      >
        Home
      </a>
       
      <a
        class="block px-3 py-2 text-base font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white hidden"
        href="#/dashboard"
      >
        Dashboard
      </a>
       
      <a
        class="block px-3 py-2 text-base font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white"
        href="#/results"
      >
        Results
      </a>
    </div>
     
    <div
      class="pb-3 border-t border-gray-700"
    >
      <div
        class="px-2 mt-3 space-y-1 mb-1"
      >
        <a
          class="block px-3 py-2 text-base font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white"
          href="#/login"
        >
          Login
        </a>
         
        <a
          class="block px-3 py-2 text-base font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white"
          href="#/register"
        >
          Register
        </a>
         
        <a
          class="block px-3 py-2 text-base font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white hidden"
          href="#/logout"
        >
          Log out
        </a>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Storyshots Nav Mobile Guest Menu Open 1`] = `
<nav
  class="bg-gray-800"
>
  <div
    class="px-4 mx-auto max-w-7xl sm:px-6 lg:px-8"
  >
    <div
      class="flex items-center justify-between h-16"
    >
      <div
        class="flex items-center"
      >
        <div
          class="flex-shrink-0"
        >
          <div
            class="text-white font-bold tracking-wide"
          >
            <span>
              Halal
            </span>
             
            <span
              class="text-green-400"
            >
              Competitions
            </span>
          </div>
        </div>
         
        <div
          class="hidden md:block"
        >
          <div
            class="flex items-baseline ml-10 space-x-4"
          >
            <a
              aria-current="page"
              class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white router-link-exact-active router-link-active"
              href="#/"
            >
              Home

            </a>
             
            <a
              class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white hidden"
              href="#/dashboard"
            >
              Dashboard

            </a>
             
            <a
              class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white"
              href="#/results"
            >
              Results

            </a>
          </div>
        </div>
      </div>
       
      <div
        class="hidden md:block"
      >
        <div
          class="flex items-center ml-4 md:ml-6"
        >
          <a
            class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white"
            href="#/login"
          >
            Login

          </a>
           
          <a
            class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white"
            href="#/register"
          >
            Register

          </a>
           
          <a
            class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white hidden"
            href="#/logout"
          >
            Log out

          </a>
        </div>
      </div>
       
      <div
        class="flex -mr-2 md:hidden"
      >
        <button
          class="inline-flex items-center justify-center p-2 text-gray-400 bg-gray-800 rounded-md hover:text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white"
        >
          <span
            class="sr-only"
          >
            Open main menu
          </span>
           
          <svg
            aria-hidden="true"
            class="block w-6 h-6 hidden"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 6h16M4 12h16M4 18h16"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
           
          <svg
            aria-hidden="true"
            class="w-6 h-6"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
   
  <div
    class="md:hidden"
  >
    <div
      class="px-2 pt-2 pb-3 space-y-1 sm:px-3"
    >
      <a
        aria-current="page"
        class="block px-3 py-2 text-base font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white router-link-exact-active router-link-active"
        href="#/"
      >
        Home
      </a>
       
      <a
        class="block px-3 py-2 text-base font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white hidden"
        href="#/dashboard"
      >
        Dashboard
      </a>
       
      <a
        class="block px-3 py-2 text-base font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white"
        href="#/results"
      >
        Results
      </a>
    </div>
     
    <div
      class="pb-3 border-t border-gray-700"
    >
      <div
        class="px-2 mt-3 space-y-1 mb-1"
      >
        <a
          class="block px-3 py-2 text-base font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white"
          href="#/login"
        >
          Login
        </a>
         
        <a
          class="block px-3 py-2 text-base font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white"
          href="#/register"
        >
          Register
        </a>
         
        <a
          class="block px-3 py-2 text-base font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white hidden"
          href="#/logout"
        >
          Log out
        </a>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Storyshots Nav Mobile Logged In Menu Open 1`] = `
<nav
  class="bg-gray-800"
>
  <div
    class="px-4 mx-auto max-w-7xl sm:px-6 lg:px-8"
  >
    <div
      class="flex items-center justify-between h-16"
    >
      <div
        class="flex items-center"
      >
        <div
          class="flex-shrink-0"
        >
          <div
            class="text-white font-bold tracking-wide"
          >
            <span>
              Halal
            </span>
             
            <span
              class="text-green-400"
            >
              Competitions
            </span>
          </div>
        </div>
         
        <div
          class="hidden md:block"
        >
          <div
            class="flex items-baseline ml-10 space-x-4"
          >
            <a
              aria-current="page"
              class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white router-link-exact-active router-link-active hidden"
              href="#/"
            >
              Home

            </a>
             
            <a
              class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white"
              href="#/dashboard"
            >
              Dashboard

            </a>
             
            <a
              class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white"
              href="#/results"
            >
              Results

            </a>
          </div>
        </div>
      </div>
       
      <div
        class="hidden md:block"
      >
        <div
          class="flex items-center ml-4 md:ml-6"
        >
          <a
            class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white hidden"
            href="#/login"
          >
            Login

          </a>
           
          <a
            class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white hidden"
            href="#/register"
          >
            Register

          </a>
           
          <a
            class="px-3 py-2 text-sm font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white"
            href="#/logout"
          >
            Log out

          </a>
        </div>
      </div>
       
      <div
        class="flex -mr-2 md:hidden"
      >
        <button
          class="inline-flex items-center justify-center p-2 text-gray-400 bg-gray-800 rounded-md hover:text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white"
        >
          <span
            class="sr-only"
          >
            Open main menu
          </span>
           
          <svg
            aria-hidden="true"
            class="block w-6 h-6 hidden"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 6h16M4 12h16M4 18h16"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
           
          <svg
            aria-hidden="true"
            class="w-6 h-6"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
   
  <div
    class="md:hidden"
  >
    <div
      class="px-2 pt-2 pb-3 space-y-1 sm:px-3"
    >
      <a
        aria-current="page"
        class="block px-3 py-2 text-base font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white router-link-exact-active router-link-active hidden"
        href="#/"
      >
        Home
      </a>
       
      <a
        class="block px-3 py-2 text-base font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white"
        href="#/dashboard"
      >
        Dashboard
      </a>
       
      <a
        class="block px-3 py-2 text-base font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white"
        href="#/results"
      >
        Results
      </a>
    </div>
     
    <div
      class="pb-3 border-t border-gray-700"
    >
      <div
        class="px-2 mt-3 space-y-1 mb-1"
      >
        <a
          class="block px-3 py-2 text-base font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white hidden"
          href="#/login"
        >
          Login
        </a>
         
        <a
          class="block px-3 py-2 text-base font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white hidden"
          href="#/register"
        >
          Register
        </a>
         
        <a
          class="block px-3 py-2 text-base font-medium text-gray-300 rounded-md hover:bg-gray-700 hover:text-white"
          href="#/logout"
        >
          Log out
        </a>
      </div>
    </div>
  </div>
</nav>
`;
